# gui

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
android/: AndroidManifest.xml
src/: main.cpp
src/app/: BottomBar.qml  Bottombar.qml  CMakeLists.txt  Code.qml  Controls.qml  CustomPane.qml  CustomSlider.qml  CustomTextField.qml  Loading.qml  Main.qml  Separator.qml  Topbar.qml  Video.qml  main.cpp  main.qml
src/communication/: CMakeLists.txt  communication.cpp  communication.h
src/manager/: CMakeLists.txt  FileManager.cpp  FileManager.h  manager.cpp  manager.h
src/video/: CMakeLists.txt  video.cpp  video.h
src/views/: Android.qml  ArrowButton.qml  Blocks.qml  BottomBar.qml  CMakeLists.txt  Code.qml  Controls.qml  CustomButton.qml  CustomTabBar.qml  CustomText.qml  CustomTextField.qml  Desktop.qml  Loading.qml  Main.qml  Separator.qml  ToggleButton.qml  Topbar.qml  Video.qml  android.qml  main.qml
src/views/blocks/: package.json
